--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "@mui/material": "^5.0.4",
+    "@mui/styled-engine-sc": "^5.0.3",
     "next": "11.1.2",
+    "next-transpile-modules": "^8.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.0.1",
