--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>kotlin-logging-jvm</artifactId>
             <version>2.0.11</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.ws.xmlschema</groupId>
+            <artifactId>xmlschema-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
